--- a/public/stylesheets/list/list.css
+++ b/public/stylesheets/list/list.css
@@ -13,7 +13,7 @@ body {
 	color: #efefef;
 }
 .fy-item {
-	margin-top: 0.4rem;
+	margin-bottom: 0.4rem;
 	height: 2rem;
 	line-height: 2rem;
 	text-align: center;
