--- a/views/list/list.ejs
+++ b/views/list/list.ejs
@@ -1,10 +1,16 @@
 <% include ../head.ejs %>
-	    <title>登录</title>
-	    <link rel='stylesheet' href='/stylesheets/list/list.css' />
-	    <script type="text/javascript" src="/javascripts/js/list/list.js"></script>
-  	</head>
-  	<body>  	
-      <div class="header">别人家</div>   
+        <title>登录</title>
+        <link rel='stylesheet' href='/stylesheets/list/list.css' />
+        <script type="text/javascript" src="/javascripts/js/list/list.js"></script>
+    </head>
+    <body>      
+      <div class="header"><span class="others">别人</span><span class="home-word">家</span>
+            <span class="login-area">
+                <span class="login-img"></span>          
+                <span class="split-img"></span>
+            </span>
+       </div>   
+        
       <div class="content">
         <ul>
           <li class="fy-item">柯勋家</li>
@@ -14,5 +20,5 @@
           <li class="fy-item"> </li>
         </ul>
       </div>
-  	</body>
+    </body>
 </html>
