--- a/public/stylesheets/index/index.css
+++ b/public/stylesheets/index/index.css
@@ -14,7 +14,7 @@ body {
 	font-size: 0.36rem;
 	height: 0.5rem;
 	line-height: 0.5rem;
-	color: #27a566;
+	color: #76B3B4;
 }
 .title .sub-title {
 	font-size: 0.14rem;
