--- a/public/stylesheets/list/list.css
+++ b/public/stylesheets/list/list.css
@@ -5,12 +5,51 @@ body {
 	position: relative;
 }
 .header {
+	width: 100%;
 	height: 0.5rem;
 	line-height: 0.5rem;
 	font-size: 0.2rem;
-	background: #27a566;
-	text-align: center;
 	color: #efefef;
+	background: #272727;
+	position: fixed;
+	left: 0;
+	top: 0;
+}
+.header .others {
+	margin-left: 0.2rem;
+}
+.header .home-word {
+	color: #76B3B4;
+}
+
+.login-area {
+	position: absolute;
+	width: 32%;
+	height: 0.5rem;
+	right: 0;
+	top: 0;
+	background: #686868;
+}
+.split-img {
+	display: inline-block;
+	float: left;
+	width: 0.3rem;
+	height: 0.5rem;
+	background: url('/images/list/split-img.jpg');
+	background-size: contain;
+
+}
+.header .login-img {
+	display: inline-block;
+	float: right;
+	width: 0.5rem;
+	height: 0.5rem;
+	background: url('/images/list/login.jpg');
+	background-size: contain;
+}
+
+.content {
+	margin-top: 0.5rem;
 }
 .fy-item {
 	margin-bottom: 0.4rem;
@@ -18,6 +57,6 @@ body {
 	line-height: 2rem;
 	text-align: center;
 	font-size: 0.24rem;
-	color: #27a566;
+	color: #76B3B4;
 	background: #eee;
 }
