--- a/views/list/list.ejs
+++ b/views/list/list.ejs
@@ -4,20 +4,67 @@
         <script type="text/javascript" src="/javascripts/js/list/list.js"></script>
     </head>
     <body>      
-      <div class="header"><span class="others">别人</span><span class="home-word">家</span>
+        <div class="header"><span class="others">别人</span><span class="home-word">家</span>
             <span class="login-area">
                 <span class="login-img"></span>          
                 <span class="split-img"></span>
             </span>
-       </div>   
+        </div>  
         
       <div class="content">
         <ul>
-          <li class="fy-item">柯勋家</li>
-          <li class="fy-item">刘文超家</li>
-          <li class="fy-item">蕾静家</li>
-          <li class="fy-item"> </li>
-          <li class="fy-item"> </li>
+           <li class="fy-item">
+                <div class="fy-item-cover">
+                    <img src="/resource/1/cover.jpg" class="fy-item-img">
+                    <span class="like-icon donot-like"></span>
+                </div>                
+                <div class="fy-item-info clearfix">
+                    <img class="fy-item-portrait" src="/resource/1/portrait.jpg">                                       
+                    <div class="fy-item-textinfo">
+                        <p class="fy-item-name">刘念的家</p>
+                        <p class="fy-item-detail"><span>一室一厅 </span><span>软装6万 硬装3万 </span><span>上海 徐汇</span></p>
+                    </div>
+                </div>
+          </li>
+          <li class="fy-item">
+                <div class="fy-item-cover">
+                    <img src="/resource/1/cover.jpg" class="fy-item-img">
+                    <span class="like-icon donot-like"></span>
+                </div>                
+                <div class="fy-item-info clearfix">
+                    <img class="fy-item-portrait" src="/resource/1/portrait.jpg">                                       
+                    <div class="fy-item-textinfo">
+                        <p class="fy-item-name">刘念的家</p>
+                        <p class="fy-item-detail"><span>一室一厅 </span><span>软装6万 硬装3万 </span><span>上海 徐汇</span></p>
+                    </div>
+                </div>            
+          </li>
+          <li class="fy-item">
+                <div class="fy-item-cover">
+                    <img src="/resource/1/cover.jpg" class="fy-item-img">
+                    <span class="like-icon donot-like"></span>
+                </div>                
+                <div class="fy-item-info clearfix">
+                    <img class="fy-item-portrait" src="/resource/1/portrait.jpg">                                       
+                    <div class="fy-item-textinfo">
+                        <p class="fy-item-name">刘念的家</p>
+                        <p class="fy-item-detail"><span>一室一厅 </span><span>软装6万 硬装3万 </span><span>上海 徐汇</span></p>
+                    </div>
+                </div>            
+          </li>
+          <li class="fy-item">
+                <div class="fy-item-cover">
+                    <img src="/resource/1/cover.jpg" class="fy-item-img">
+                    <span class="like-icon donot-like"></span>
+                </div>                
+                <div class="fy-item-info clearfix">
+                    <img class="fy-item-portrait" src="/resource/1/portrait.jpg">                                       
+                    <div class="fy-item-textinfo">
+                        <p class="fy-item-name">刘念的家</p>
+                        <p class="fy-item-detail"><span>一室一厅 </span><span>软装6万 硬装3万 </span><span>上海 徐汇</span></p>
+                    </div>
+                </div>            
+          </li>
         </ul>
       </div>
     </body>
