--- a/public/stylesheets/list/list.css
+++ b/public/stylesheets/list/list.css
@@ -12,6 +12,7 @@ body {
 	color: #efefef;
 	background: #272727;
 	position: fixed;
+	z-index: 100;
 	left: 0;
 	top: 0;
 }
@@ -49,14 +50,51 @@ body {
 }
 
 .content {
-	margin-top: 0.5rem;
+	margin-top: 0.53rem;
 }
 .fy-item {
-	margin-bottom: 0.4rem;
-	height: 2rem;
-	line-height: 2rem;
-	text-align: center;
-	font-size: 0.24rem;
-	color: #76B3B4;
-	background: #eee;
+	margin-bottom: 0.08rem;
+	margin-left: 1%;
+	width: 98%;
+	box-shadow: 0 0 3px 2px #ddd;
+}
+.fy-item .fy-item-img {
+	width: 100%;
+}
+.fy-item-info {
+	padding: 0.08rem;
+}
+.fy-item-portrait {
+	float: left;
+	margin-right: 
+	height: 0.42rem;
+	width: 0.42rem;
+	border-radius: 0.21rem;
+}
+.fy-item-textinfo {
+	float: left;
+	margin-left: 0.15rem;
+	margin-top: 0.0rem;
+}
+.fy-item-name {
+	line-height: 0.26rem;
+	height: 0.26rem;
+	font-size: 0.16rem;
+}
+.fy-item-detail {
+	line-height: 0.2rem;
+	height: 0.2rem;
+	font-size: 0.12rem;
+	color: #aaa;
+}
+.like-icon {
+	position: absolute;
+	z-index: 10;
+	right: 0.1rem;
+	bottom: 0.05rem;
+	width: 0.24rem;
+	height: 0.24rem;
+}
+.fy-item-cover {
+    position: relative;
 }
