--- a/views/list/list.ejs
+++ b/views/list/list.ejs
@@ -21,8 +21,8 @@
                 <div class="fy-item-info clearfix">
                     <img class="fy-item-portrait" src="/resource/2/portrait.jpg">                                       
                     <div class="fy-item-textinfo">
-                        <p class="fy-item-name">刘念的家</p>
-                        <p class="fy-item-detail"><span>一室一厅 </span><span>软装6万 硬装3万 </span><span>上海 徐汇</span></p>
+                        <p class="fy-item-name">刘文超的家</p>
+                        <p class="fy-item-detail"><span>2室1厅 </span><span>装修6万 </span><span>上海 闵行</span></p>
                     </div>
                 </div>            
             </li>
@@ -35,37 +35,22 @@
                     <img class="fy-item-portrait" src="/resource/1/portrait.jpg">                                       
                     <div class="fy-item-textinfo">
                         <p class="fy-item-name">刘念的家</p>
-                        <p class="fy-item-detail"><span>一室一厅 </span><span>软装6万 硬装3万 </span><span>上海 徐汇</span></p>
+                        <p class="fy-item-detail"><span>一室一厅 </span><span>租的 </span><span>上海 徐汇</span></p>
                     </div>
                 </div>
             </li>
-
             <li class="fy-item">
                 <div class="fy-item-cover">
-                    <img src="/resource/1/cover.jpg" class="fy-item-img">
+                    <img src="/resource/3/cover.jpg" class="fy-item-img">
                     <span class="like-icon donot-like"></span>
                 </div>                
                 <div class="fy-item-info clearfix">
-                    <img class="fy-item-portrait" src="/resource/1/portrait.jpg">                                       
+                    <img class="fy-item-portrait" src="/resource/3/portrait.jpg">                                       
                     <div class="fy-item-textinfo">
-                        <p class="fy-item-name">刘念的家</p>
-                        <p class="fy-item-detail"><span>一室一厅 </span><span>软装6万 硬装3万 </span><span>上海 徐汇</span></p>
+                        <p class="fy-item-name">吕俊超的家</p>
+                        <p class="fy-item-detail"><span>2室1厅 </span><span>装修8万 </span><span>上海 杨浦</span></p>
                     </div>
-                </div>            
-            </li>
-            <li class="fy-item">
-                <div class="fy-item-cover">
-                    <img src="/resource/1/cover.jpg" class="fy-item-img">
-                    <span class="like-icon donot-like"></span>
-                </div>                
-                <div class="fy-item-info clearfix">
-                    <img class="fy-item-portrait" src="/resource/1/portrait.jpg">                                       
-                    <div class="fy-item-textinfo">
-                        <p class="fy-item-name">刘念的家</p>
-                        <p class="fy-item-detail"><span>一室一厅 </span><span>软装6万 硬装3万 </span><span>上海 徐汇</span></p>
-                    </div>
-                </div>            
-            </li>
+                </div>
         </ul>
       </div>
     </body>
