--- a/views/head.ejs
+++ b/views/head.ejs
@@ -5,4 +5,5 @@
   		<meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1">
 	    <link rel='stylesheet' href='/stylesheets/reset.css' />
 	    <link rel='stylesheet' href='/stylesheets/base.css' />
-	    <script type="text/javascript" src="/javascripts/lib/jquery.min.js"></script>
+	    <script type="text/javascript" src="/javascripts/lib/zepto.min.js"></script>
+	    <script type="text/javascript" src="/javascripts/lib/touch.js"></script>
