--- a/views/list/list.ejs
+++ b/views/list/list.ejs
@@ -13,7 +13,7 @@
         
       <div class="content">
         <ul>
-            <li class="fy-item">
+            <li class="fy-item" data-id="1">
                 <div class="fy-item-cover">
                     <img src="/resource/2/cover.jpg" class="fy-item-img">
                     <span class="like-icon donot-like"></span>
@@ -25,6 +25,19 @@
                         <p class="fy-item-detail"><span>2室1厅 </span><span>装修6万 </span><span>上海 闵行</span></p>
                     </div>
                 </div>            
+            </li>            
+            <li class="fy-item">
+                <div class="fy-item-cover">
+                    <img src="/resource/3/cover.jpg" class="fy-item-img">
+                    <span class="like-icon donot-like"></span>
+                </div>                
+                <div class="fy-item-info clearfix">
+                    <img class="fy-item-portrait" src="/resource/3/portrait.jpg">                                       
+                    <div class="fy-item-textinfo">
+                        <p class="fy-item-name">吕俊超的家</p>
+                        <p class="fy-item-detail"><span>2室1厅 </span><span>装修8万 </span><span>上海 杨浦</span></p>
+                    </div>
+                </div>
             </li>
             <li class="fy-item">
                 <div class="fy-item-cover">
@@ -39,18 +52,6 @@
                     </div>
                 </div>
             </li>
-            <li class="fy-item">
-                <div class="fy-item-cover">
-                    <img src="/resource/3/cover.jpg" class="fy-item-img">
-                    <span class="like-icon donot-like"></span>
-                </div>                
-                <div class="fy-item-info clearfix">
-                    <img class="fy-item-portrait" src="/resource/3/portrait.jpg">                                       
-                    <div class="fy-item-textinfo">
-                        <p class="fy-item-name">吕俊超的家</p>
-                        <p class="fy-item-detail"><span>2室1厅 </span><span>装修8万 </span><span>上海 杨浦</span></p>
-                    </div>
-                </div>
         </ul>
       </div>
     </body>
