--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -11,7 +11,12 @@
             </div>            
             <div class="content-area">
                 <input type="hidden" name="referer" class="referer" value=<%=referer%>>
-                <div class="form-area signIn-area"><input type="text" name="username1" id="username1" placeholder="请输入邮箱" autocomplete="off"><input type="password" name="password1" id="password1" placeholder="密码" autocomplete="off"></div>
+                <div class="form-area signIn-area">
+                    <label><i class="iconfont input-icon">&#xe607;</i><input type="text" name="username1" id="username1" placeholder="请输入邮箱" autocomplete="off"></label>
+                    <label>
+                        <input type="password" name="password1" id="password1" placeholder="密码" autocomplete="off">
+                    </label>
+                </div>
 
                 <div class="form-area signUp-area"><input type="text" name="username2" id="username2" placeholder="请输入邮箱" autocomplete="off"><input type="password" name="password2" id="password2" placeholder="密码" autocomplete="off"><input type="password" name="password" id="password21" placeholder="确认密码" autocomplete="off"></div>
                 <button class="btn confirm" type="button">确定</button>
