--- a/views/index/index.ejs
+++ b/views/index/index.ejs
@@ -6,7 +6,7 @@
   	<body>  	
       <div class="title">
         <p class="main-title">别人家</p>
-        <p class="sub-title">装修新家，先上别人家看看</p>
+        <p class="sub-title">一起寻找，你所有的向往</p>
       </div>      
   	</body>
 </html>
