--- a/views/list/list.ejs
+++ b/views/list/list.ejs
@@ -22,7 +22,7 @@
                     <img class="fy-item-portrait" src="/resource/2/portrait.jpg">                                       
                     <div class="fy-item-textinfo">
                         <p class="fy-item-name">刘文超的家</p>
-                        <p class="fy-item-detail"><span>2室1厅 </span><span>装修6万 </span><span>上海 闵行</span></p>
+                        <p class="fy-item-detail"><i class="iconfont info-icon">&#xe602;</i><span>2室1厅</span><i class="iconfont info-icon">&#xe682;</i><span>装修6万</span><i class="iconfont info-icon">&#xe635;</i><span>上海 闵行</span></p>
                     </div>
                 </div>            
             </li>            
@@ -35,7 +35,7 @@
                     <img class="fy-item-portrait" src="/resource/3/portrait.jpg">                                       
                     <div class="fy-item-textinfo">
                         <p class="fy-item-name">吕俊超的家</p>
-                        <p class="fy-item-detail"><span>2室1厅 </span><span>装修8万 </span><span>上海 杨浦</span></p>
+                        <p class="fy-item-detail"><i class="iconfont info-icon">&#xe602;</i><span>2室1厅</span><i class="iconfont info-icon">&#xe682;</i><span>装修6万</span><i class="iconfont info-icon">&#xe635;</i><span>上海 杨浦</span></p>
                     </div>
                 </div>
             </li>
@@ -48,7 +48,7 @@
                     <img class="fy-item-portrait" src="/resource/1/portrait.jpg">                                       
                     <div class="fy-item-textinfo">
                         <p class="fy-item-name">刘念的家</p>
-                        <p class="fy-item-detail"><span>一室一厅 </span><span>租的 </span><span>上海 徐汇</span></p>
+                        <p class="fy-item-detail"><i class="iconfont info-icon">&#xe602;</i><span>2室1厅</span><i class="iconfont info-icon">&#xe682;</i><span>装修6万</span><i class="iconfont info-icon">&#xe635;</i><span>上海 徐汇</span></p>
                     </div>
                 </div>
             </li>
