--- a/public/stylesheets/list/list.css
+++ b/public/stylesheets/list/list.css
@@ -86,6 +86,7 @@ body {
 	height: 0.2rem;
 	font-size: 0.12rem;
 	color: #aaa;
+	margin-left: -0.06rem;
 }
 .like-icon {
 	position: absolute;
@@ -97,4 +98,9 @@ body {
 }
 .fy-item-cover {
     position: relative;
+}
+.info-icon {
+	font-size: 0.12rem;
+	margin-right: 0.01rem;
+	margin-left: 0.06rem;
 }
