--- a/public/stylesheets/login/login.css
+++ b/public/stylesheets/login/login.css
@@ -57,6 +57,8 @@ span.active-tab {
 	border-radius: 0;
 	border-bottom: 1px solid #eee;
 	font-size: 0.16rem;
+	box-sizing: border-box;
+	padding-left: 0.3rem;
 }
 input::-webkit-input-placeholder { /* WebKit browsers */ 
 color: #ccc; 
@@ -86,5 +88,12 @@ label {
 }
 .input-icon {
 	position: absolute;
-	left: 0.2rem;
+	left: 0;
+	color: #ccc;
+}
+.username-icon {
+	top: 0.36rem;
+}
+.password-icon {
+	top: 0.34rem;
 }
