--- a/views/list/list.ejs
+++ b/views/list/list.ejs
@@ -12,47 +12,25 @@
         </div>  
         
       <div class="content">
+        <% if(list) { %>
         <ul>
-            <li class="fy-item" data-id="1">
-                <div class="fy-item-cover">
-                    <img src="/resource/2/cover.jpg" class="fy-item-img">
-                    <span class="like-icon donot-like"></span>
-                </div>                
-                <div class="fy-item-info clearfix">
-                    <img class="fy-item-portrait" src="/resource/2/portrait.jpg">                                       
-                    <div class="fy-item-textinfo">
-                        <p class="fy-item-name">刘文超的家</p>
-                        <p class="fy-item-detail"><i class="iconfont info-icon">&#xe602;</i><span>2室1厅</span><i class="iconfont info-icon">&#xe682;</i><span>装修6万</span><i class="iconfont info-icon">&#xe635;</i><span>上海 闵行</span></p>
-                    </div>
-                </div>            
-            </li>            
-            <li class="fy-item">
-                <div class="fy-item-cover">
-                    <img src="/resource/3/cover.jpg" class="fy-item-img">
-                    <span class="like-icon donot-like"></span>
-                </div>                
-                <div class="fy-item-info clearfix">
-                    <img class="fy-item-portrait" src="/resource/3/portrait.jpg">                                       
-                    <div class="fy-item-textinfo">
-                        <p class="fy-item-name">吕俊超的家</p>
-                        <p class="fy-item-detail"><i class="iconfont info-icon">&#xe602;</i><span>2室1厅</span><i class="iconfont info-icon">&#xe682;</i><span>装修6万</span><i class="iconfont info-icon">&#xe635;</i><span>上海 杨浦</span></p>
-                    </div>
-                </div>
-            </li>
-            <li class="fy-item">
-                <div class="fy-item-cover">
-                    <img src="/resource/1/cover.jpg" class="fy-item-img">
-                    <span class="like-icon donot-like"></span>
-                </div>                
-                <div class="fy-item-info clearfix">
-                    <img class="fy-item-portrait" src="/resource/1/portrait.jpg">                                       
-                    <div class="fy-item-textinfo">
-                        <p class="fy-item-name">刘念的家</p>
-                        <p class="fy-item-detail"><i class="iconfont info-icon">&#xe602;</i><span>2室1厅</span><i class="iconfont info-icon">&#xe682;</i><span>装修6万</span><i class="iconfont info-icon">&#xe635;</i><span>上海 徐汇</span></p>
-                    </div>
-                </div>
-            </li>
+            <% list.forEach(function(item) { %>
+                <li  class="fy-item" data-id=<%=item.id%>>
+                    <div class="fy-item-cover">
+                        <img src="/resource/<%=item.id%>/cover.jpg" class="fy-item-img">
+                        <span class="like-icon donot-like"></span>
+                    </div>                
+                    <div class="fy-item-info clearfix">
+                        <img class="fy-item-portrait" src="/resource/<%=item.id%>/portrait.jpg">                                       
+                        <div class="fy-item-textinfo">
+                            <p class="fy-item-name"><%=item.title%></p>
+                            <p class="fy-item-detail"><i class="iconfont info-icon">&#xe602;</i><span><%=item.type%></span><i class="iconfont info-icon">&#xe682;</i><span>装修<%=item.dec_cost%>万</span><i class="iconfont info-icon">&#xe635;</i><span><%=item.province%> <%=item.county%></span></p>
+                        </div>
+                    </div>  
+                </li>
+            <% }) %>
         </ul>
+        <% } %>
       </div>
     </body>
 </html>
