--- a/views/single/single.ejs
+++ b/views/single/single.ejs
@@ -4,7 +4,7 @@
       <script type="text/javascript" src="/javascripts/js/single/single.js"></script>
     </head>
     <body>
-        <div class="header"><span class="others">别人</span><span class="home-word">家</span>
+        <div class="header"><i class="iconfont goBack" style="font-size: 0.22rem; margin-left: 0.1rem;">&#xe61d;</i><span class="others">别人</span><span class="home-word">家</span>
         	<span class="login-area">
               <span class="login-img"></span>          
               <span class="split-img"></span>
