mongoose user host

--- a/public/stylesheets/single/single.css
+++ b/public/stylesheets/single/single.css
@@ -48,3 +48,8 @@ body {
 	background: url('/images/list/login.jpg');
 	background-size: contain;
 }
+.goBack {
+	margin-left: 0.1rem;
+	font-size: 0.22rem;
+	color: #76B3B4;
+}
