--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -6,6 +6,7 @@
     <body>
         <div class="main-area">
             <div class="logo-area">
+                <i class="iconfont goBack">&#xe61d;</i>
                 <p class="logo-title">别人家</p>   
                 <div class="toggle-tab-area"><span class="signIn-tab active-tab">登录</span><span class="signUp-tab">注册</span></div>
             </div>            
