--- a/public/stylesheets/login/login.css
+++ b/public/stylesheets/login/login.css
@@ -97,3 +97,10 @@ label {
 .password-icon {
 	top: 0.34rem;
 }
+.goBack {
+	position: absolute;
+	left: 0.2rem;
+	top: 0.2rem;
+	font-size: 0.22rem;
+	color: #76B3B4;
+}
