--- a/views/single/single.ejs
+++ b/views/single/single.ejs
@@ -9,8 +9,14 @@
               <span class="login-img"></span>          
               <span class="split-img"></span>
         	</span>
+        </div>
+        <div class="cover-part">
+          <img src="/resource/<%=data._id.toString()%>/cover.jpg">
+          <div class="info-tabs">
+              <span class="house-title"><%=data.title%></span>
+              <i class="iconfont play-icon">&#xe604;</i>
+          </div>             
         </div>   
-        <img src="/resource/3/cover.jpg" style="width: 100%; margin-top: 0.52rem;">   
     </body>
 </html>
     
