--- a/public/stylesheets/iconfont/iconfont.css
+++ b/public/stylesheets/iconfont/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1480783253739'); /* IE9*/
-  src: url('iconfont.eot?t=1480783253739#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1480783253739') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1480783253739') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1480783253739#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1480867300625'); /* IE9*/
+  src: url('iconfont.eot?t=1480867300625#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1480867300625') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1480867300625') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1480867300625#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -16,6 +16,8 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-bofang:before { content: "\e604"; }
+
 .icon-yonghu:before { content: "\e624"; }
 
 .icon-feiyong:before { content: "\e682"; }
@@ -23,6 +25,8 @@
 .icon-mima:before { content: "\e633"; }
 
 .icon-xyfanhui01:before { content: "\e61d"; }
+
+.icon-dianbo:before { content: "\e600"; }
 
 .icon-xihuan:before { content: "\e699"; }
 
@@ -33,4 +37,8 @@
 .icon-home:before { content: "\e602"; }
 
 .icon-youxiang:before { content: "\e68b"; }
+
+.icon-denglu:before { content: "\e603"; }
+
+.icon-icon:before { content: "\e60f"; }
 
