--- a/public/stylesheets/login/login.css
+++ b/public/stylesheets/login/login.css
@@ -99,8 +99,8 @@ label {
 }
 .goBack {
 	position: absolute;
-	left: 0.2rem;
+	left: 0.1rem;
 	top: 0.2rem;
-	font-size: 0.22rem;
-	color: #76B3B4;
+	font-size: 0.26rem;
+	color: #fff;
 }
