--- a/views/single/single.ejs
+++ b/views/single/single.ejs
@@ -15,7 +15,58 @@
           <div class="info-tabs">
               <span class="house-title"><%=data.title%></span>
               <i class="iconfont play-icon">&#xe604;</i>
+              <ul class="info-tabs__tabs">
+                <li class="info-tabs__tab"><a href="#host-info">主人信息</a></li>
+                <li class="info-tabs__tab"><a href="#house-info">房屋信息</a></li>
+                <li class="info-tabs__tab"><a href="#comments">评论</a></li>
+              </ul>
           </div>             
+        </div>
+        <div class="info__full">
+
+          <p class="portrait-name"><img class="info__portrait" src="/resource/<%=data._id%>/portrait.jpg">
+              <span><%=data.title %></span>
+
+          </p>
+
+          <h2 class="info__title">主人信息</h2>
+          <hr class="seperator">
+            <% data.hosts.forEach(function(item) { %>
+              <div class="info__field--key">
+                <p>姓名</p>
+                <p>年龄</p>
+                <p>职业</p>
+              </div>
+              <div class="info__field--value">
+                <p><%=item.hostName%></p>
+                <p><%=item.hostAge%></p>
+                <p><%=item.hostJob%></p>
+              </div>
+            <%  })%>
+       
+          <h2 class="info__title">房屋信息</h2>
+          <hr class="seperator">
+              <div class="info__field--key">
+                <p>房屋位置</p>
+                <p>户型</p>
+                <p>面积</p>
+                <p>装修时间</p>
+                <p>装修费用</p>
+                <p>装修耗时</p>
+                <p>感悟</p>
+              </div>
+              <div class="info__field--value">
+                <p><%=data.province%>&nbsp;<%=data.county%></p>
+                <p><%=data.type%></p>
+                <p><%=data.area%>㎡</p>
+                <p><%=data.dec_time%></p>
+                <p><%=data.dec_cost%>万</p>
+                <p><%=data.dec_period%>个月</p>
+                <p><%=data.dec_experience%></p>
+              </div>
+              
+            <h2 class="info__title">评论</h2>
+            <hr class="seperator">
         </div>   
     </body>
 </html>
