--- a/views/single/single.ejs
+++ b/views/single/single.ejs
@@ -1,5 +1,5 @@
 <% include ../head.ejs %>
-      <title>登录</title>
+      <title><%=data.title%></title>
       <link rel='stylesheet' href='/stylesheets/single/single.css' />
       <script type="text/javascript" src="/javascripts/js/single/single.js"></script>
     </head>
