--- a/views/index/index.ejs
+++ b/views/index/index.ejs
@@ -1,5 +1,5 @@
 <% include ../head.ejs %>
-	    <title>登录</title>
+	    <title>别人家</title>
 	    <link rel='stylesheet' href='/stylesheets/index/index.css' />
 	    <script type="text/javascript" src="/javascripts/js/index/index.js"></script>
   	</head>
