--- a/views/list/list.ejs
+++ b/views/list/list.ejs
@@ -1,5 +1,5 @@
 <% include ../head.ejs %>
-        <title>登录</title>
+        <title>别人家</title>
         <link rel='stylesheet' href='/stylesheets/list/list.css' />
         <script type="text/javascript" src="/javascripts/js/list/list.js"></script>
     </head>
