--- a/views/head.ejs
+++ b/views/head.ejs
@@ -3,6 +3,7 @@
   	<head>	 
   		<meta charset="utf-8">   
   		<meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1">
+  		<meta name="keywords" content="装修案例 室内设计 家具 别人家">
 	    <link rel='stylesheet' href='/stylesheets/reset.css' />
 	    <link rel='stylesheet' href='/stylesheets/base.css' />
 	    <script type="text/javascript" src="/javascripts/lib/zepto.min.js"></script>
