--- a/views/index/index.ejs
+++ b/views/index/index.ejs
@@ -7,8 +7,8 @@
   	<body>  	
       <div class="title">
         <p class="main-title">别人家</p>
-        <p class="sub-title">不同的空间，同样的向往</p>
-        <p class="beian">沪ICP备16027212号-1</p>
-      </div>      
+        <p class="sub-title">不同的空间，同样的向往</p>        
+      </div> 
+      <div class="beian-part">沪ICP备16027212号-1</div>     
   	</body>
 </html>
