--- a/views/head.ejs
+++ b/views/head.ejs
@@ -8,3 +8,12 @@
 	    <link rel='stylesheet' href='/stylesheets/base.css' />
 	    <script type="text/javascript" src="/javascripts/lib/zepto.min.js"></script>
 	    <script type="text/javascript" src="/javascripts/lib/touch.js"></script>
+	    <script type="text/javascript">
+			var _hmt = _hmt || [];
+			(function() {
+			  var hm = document.createElement("script");
+			  hm.src = "https://hm.baidu.com/hm.js?2db9335332fd6a79aa928fa51e5d5fc6";
+			  var s = document.getElementsByTagName("script")[0]; 
+			  s.parentNode.insertBefore(hm, s);
+			})();
+		</script>
