--- a/public/stylesheets/iconfont/iconfont.css
+++ b/public/stylesheets/iconfont/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1480867300625'); /* IE9*/
-  src: url('iconfont.eot?t=1480867300625#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1480867300625') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1480867300625') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1480867300625#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1481036570995'); /* IE9*/
+  src: url('iconfont.eot?t=1481036570995#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1481036570995') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1481036570995') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1481036570995#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -19,6 +19,8 @@
 .icon-bofang:before { content: "\e604"; }
 
 .icon-yonghu:before { content: "\e624"; }
+
+.icon-dengluyonghu:before { content: "\e632"; }
 
 .icon-feiyong:before { content: "\e682"; }
 
