--- a/views/list/list.ejs
+++ b/views/list/list.ejs
@@ -6,7 +6,11 @@
     <body>      
         <div class="header"><span class="others">别人</span><span class="home-word">家</span>
             <span class="login-area">
-                <span class="login-img"></span>          
+                <% if(!logStatus) {%>
+                    <i class="iconfont login-img unlogged">&#xe632;</i>  
+                <% }else{%>
+                    <i class="iconfont login-img logged">&#xe60f;</i>  
+                <%}%>
                 <span class="split-img"></span>
             </span>
         </div>  
