--- a/views/list/list.ejs
+++ b/views/list/list.ejs
@@ -4,7 +4,7 @@
         <script type="text/javascript" src="/javascripts/js/list/list.js"></script>
     </head>
     <body>      
-        <div class="header"><span class="others">别人</span><span class="home-word">家</span>
+        <div class="header"><a><span class="others">别人</span><span class="home-word">家</span></a>
             <span class="login-area">
                 <% if(!logStatus) {%>
                     <i class="iconfont login-img unlogged">&#xe632;</i>  
