--- a/views/single/single.ejs
+++ b/views/single/single.ejs
@@ -4,7 +4,7 @@
       <script type="text/javascript" src="/javascripts/js/single/single.js"></script>
     </head>
     <body>
-        <div class="header"><i class="iconfont goBack">&#xe61d;</i><span class="others">别人</span><span class="home-word">家</span>
+        <div class="header"><i class="iconfont goBack">&#xe61d;</i><a><span class="others">别人</span><span class="home-word">家</span></a>
         	<span class="login-area">
                 <% if(!logStatus) {%>
                     <i class="iconfont login-img unlogged">&#xe632;</i>  
