--- a/views/single/single.ejs
+++ b/views/single/single.ejs
@@ -18,7 +18,7 @@
           <img src="/resource/<%=data._id.toString()%>/cover.jpg">
           <div class="info-tabs">
               <span class="house-title"><%=data.title%></span>
-              <i class="iconfont play-icon">&#xe604;</i>
+              <a href="/pano"><i class="iconfont play-icon">&#xe604;</i></a>
               <ul class="info-tabs__tabs">
                 <li class="info-tabs__tab"><a href="#host-info">主人信息</a></li>
                 <li class="info-tabs__tab"><a href="#house-info">房屋信息</a></li>
