--- a/public/stylesheets/pano/pano.css
+++ b/public/stylesheets/pano/pano.css
@@ -6,7 +6,25 @@ html,body{
     width: 100%;
     height: 100%;
 }
+body {
+	position: relative;
+}
 #canvas {
 	width: 100%;
 	height: 100%;
+}
+.goBack {
+	position: absolute;
+	top: 0.2rem;
+	left: 0.16rem;
+	font-size: 0.26rem;
+	color: #fff;
+}
+#compass {
+	position: absolute;
+	top: 0.1rem;
+	right: 0.1rem;
+	width: 100px;
+	height: 100px;
+	display: inline-block;
 }
