--- a/views/head.ejs
+++ b/views/head.ejs
@@ -8,6 +8,7 @@
 	    <link rel='stylesheet' href='/stylesheets/base.css' />
 	    <script type="text/javascript" src="/javascripts/lib/zepto.min.js"></script>
 	    <script type="text/javascript" src="/javascripts/lib/touch.js"></script>
+	    <script type="text/javascript" src="/javascripts/lib/fx.js"></script>
 	    <script type="text/javascript">
 			var _hmt = _hmt || [];
 			(function() {
