--- a/views/myInfo.ejs
+++ b/views/myInfo.ejs
@@ -1,2 +1,2 @@
-<div class="mask--myinfo" style="position: absolute; width: 100%; height: 100%; background: #333; opacity: 0.8; z-index: 100; display: none;"></div>
-<iframe class="myinfo" src="" style="position: absolute; width: 2.6rem; height: 100%; background: #fff; z-index: 101; right: -2.6rem;"></iframe>
+<div class="mask--myinfo" style="position: absolute; width: 100%; height: 100%; background: #76B3B4; opacity: 0.5; z-index: 98; display: none;"></div>
+<iframe class="myinfo" src="" style="position: absolute; width: 0; height: 100%; background: #eee; z-index: 99; right: 0;"></iframe>
