iframe prevent default

--- a/views/myInfo.ejs
+++ b/views/myInfo.ejs
@@ -1,2 +1,2 @@
 <div class="mask--myinfo" style="position: absolute; width: 100%; height: 100%; background: #76B3B4; opacity: 0.5; z-index: 98; display: none;"></div>
-<iframe class="myinfo" src="" style="position: absolute; width: 0; height: 100%; background: #eee; z-index: 99; right: 0;"></iframe>
+<iframe class="myinfo" src="http://www.taobao.com" style="position: absolute; width: 0.01rem; height: 100%; background: #eee; z-index: 99; right: 0;"></iframe>
