--- a/views/myInfo.ejs
+++ b/views/myInfo.ejs
@@ -1,2 +1,2 @@
 <div class="mask--myinfo" style="position: absolute; width: 100%; height: 100%; background: #76B3B4; opacity: 0.5; z-index: 98; display: none;"></div>
-<div class="myinfo" src="" style="position: absolute; width: 0.01rem; height: 100%; background: #eee; z-index: 99; right: 0;"><img src="/images/mm.JPG" style="width: 100%; ">不好意思，女神跟我结婚了。</div>
+<div class="myinfo" src="" style="position: absolute; width: 0.01rem; height: 100%; background: #eee; z-index: 99; right: 0;"><img src="/images/mm.jpg" style="width: 100%; ">不好意思，女神跟我结婚了。</div>
