--- a/views/single/single.ejs
+++ b/views/single/single.ejs
@@ -4,6 +4,7 @@
       <script type="text/javascript" src="/javascripts/js/single/single.js"></script>
     </head>
     <body>
+        <% include ../myInfo.ejs %>  
         <div class="header"><i class="iconfont goBack">&#xe61d;</i><a><span class="others">别人</span><span class="home-word">家</span></a>
         	<span class="login-area">
                 <% if(!logStatus) {%>
