--- a/public/stylesheets/list/list.css
+++ b/public/stylesheets/list/list.css
@@ -1,10 +1,6 @@
 html {
 	height: 100%;
 }
-body {
-	position: relative;
-	overflow-x: hidden;
-}
 .header {
 	width: 100%;
 	height: 0.5rem;
@@ -52,7 +48,7 @@ body {
 }
 
 .content {
-	margin-top: 0.55rem;
+	padding-top: 0.55rem;
 }
 .fy-item {
 	margin-bottom: 0.1rem;
