--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -20,7 +20,8 @@
                 </div>
 
                 <div class="form-area signUp-area">
-                    <label><i class="iconfont input-icon username-icon">&#xe68b;</i></label><input type="text" name="username2" id="username2" placeholder="请输入邮箱" autocomplete="off"><br>
+                    <label><i class="iconfont input-icon username-icon">&#xe68b;</i></label><input type="text" name="username2" id="username2" placeholder="邮箱" autocomplete="off"><br>
+                    <label><i class="iconfont input-icon nickname-icon">&#xe67c;</i></label><input type="text" name="nickname" id="nickname" placeholder="昵称" autocomplete="off"><br>
                     <label><i class="iconfont input-icon password-icon">&#xe633;</i></label><input type="password" name="password2" id="password2" placeholder="密码" autocomplete="off"><br>
                     <label><i class="iconfont input-icon password-icon">&#xe633;</i></label><input type="password" name="password" id="password21" placeholder="确认密码" autocomplete="off">
                 </div>
