--- a/public/stylesheets/iconfont/iconfont.css
+++ b/public/stylesheets/iconfont/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1481036570995'); /* IE9*/
-  src: url('iconfont.eot?t=1481036570995#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1481036570995') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1481036570995') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1481036570995#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1481303509225'); /* IE9*/
+  src: url('iconfont.eot?t=1481303509225#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1481303509225') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1481303509225') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1481303509225#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -24,11 +24,21 @@
 
 .icon-feiyong:before { content: "\e682"; }
 
+.icon-icon3:before { content: "\e607"; }
+
 .icon-mima:before { content: "\e633"; }
+
+.icon-pipinicheng:before { content: "\e67c"; }
+
+.icon-logout:before { content: "\e62c"; }
 
 .icon-xyfanhui01:before { content: "\e61d"; }
 
 .icon-dianbo:before { content: "\e600"; }
+
+.icon-dengjuanzhuang:before { content: "\e641"; }
+
+.icon-5:before { content: "\e610"; }
 
 .icon-xihuan:before { content: "\e699"; }
 
