--- a/public/stylesheets/login/login.css
+++ b/public/stylesheets/login/login.css
@@ -10,7 +10,7 @@ html, body {
 }
 .logo-area {
 	position: relative;
-	height: 44%;
+	height: 36%;
 	background: url('/images/cover.jpg');
 	background-size: cover;
 
@@ -49,7 +49,7 @@ span.active-tab {
 	width: 84%;
 	margin: 0.2rem auto;
 }
-#username1, #username2, #password1, #password2, #password21 {
+#username1, #username2, #password1, #password2, #password21, #nickname {
 	width: 100%;
 	height: 0.36rem;
 	margin-top: 0.2rem;
@@ -77,7 +77,7 @@ input:-webkit-autofill {
 }
 .confirm {
 	position: absolute;
-	top: 2.2rem;
+	top: 2.7rem;
 	left: 8%;
 }
 .signUp-area {
@@ -95,6 +95,9 @@ label {
 	top: 0.39rem;
 }
 .password-icon {
+	top: 0.36rem;
+}
+.nickname-icon {
 	top: 0.36rem;
 }
 .goBack {
