--- a/views/myInfo.ejs
+++ b/views/myInfo.ejs
@@ -1,2 +1,2 @@
-<div class="mask--myinfo" style="position: fixed; width: 100%; height: 100%; background: #76B3B4; opacity: 0.5; z-index: 98; display: none;"></div>
-<div class="myinfo" src="" style="position: fixed; width: 0.01rem; height: 100%; background: #eee; z-index: 99; right: 0;"><img src="/images/mm.jpg" style="width: 100%; ">不好意思，女神跟我结婚了。</div>
+<div class="mask--myinfo" style="position: fixed; width: 100%; height: 100%; background: #000; opacity: 0.5; z-index: 98; display: none;"></div>
+<iframe class="myinfo" src="/login/myInfo" style="position: fixed; width: 0; height: 100%; background: #fff; z-index: 99; right: 0; padding-top: 0.5rem;"></iframe>
