--- a/public/stylesheets/login/myInfo.css
+++ b/public/stylesheets/login/myInfo.css
@@ -1,8 +1,14 @@
+html, body {
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+}
 .content {
 	margin-top: 0.24rem;
 	margin-left: 10%;
 	width: 80%;
-	height: 3rem;
+	height: 100%;
 }
 .nickname {
 	height: 0.22rem;
