--- a/views/single/single.ejs
+++ b/views/single/single.ejs
@@ -21,9 +21,9 @@
               <span class="house-title"><%=data.title%></span>
               <a href="/pano"><i class="iconfont play-icon">&#xe604;</i></a>
               <ul class="info-tabs__tabs">
-                <li class="info-tabs__tab tab--active"><a href="#host-info">主人信息</a></li>
-                <li class="info-tabs__tab"><a href="#house-info">房屋信息</a></li>
-                <li class="info-tabs__tab"><a href="#comments">评论</a></li>
+                <li class="info-tabs__tab tab--active"><a href="javascript:void(0);" data-href="#host-info">主人信息</a></li>
+                <li class="info-tabs__tab"><a  href="javascript:void(0);" data-href="#house-info">房屋信息</a></li>
+                <li class="info-tabs__tab"><a href="javascript:void(0);" data-href="#comments">评论</a></li>
               </ul>
           </div>             
         </div>
