--- a/views/single/single.ejs
+++ b/views/single/single.ejs
@@ -10,7 +10,7 @@
                 <% if(!logStatus) {%>
                     <i class="iconfont login-img unlogged">&#xe632;</i>  
                 <% }else{%>
-                    <i class="iconfont login-img logged">&#xe60f;</i>  
+                    <i class="iconfont login-img logged">&#xe605;</i>  
                 <%}%>      
               <span class="split-img"></span>
         	</span>
