--- a/public/stylesheets/iconfont/iconfont.css
+++ b/public/stylesheets/iconfont/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1481303509225'); /* IE9*/
-  src: url('iconfont.eot?t=1481303509225#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1481303509225') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1481303509225') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1481303509225#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1481384023375'); /* IE9*/
+  src: url('iconfont.eot?t=1481384023375#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1481384023375') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1481384023375') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1481384023375#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -53,4 +53,6 @@
 .icon-denglu:before { content: "\e603"; }
 
 .icon-icon:before { content: "\e60f"; }
+
+.icon-menu:before { content: "\e605"; }
 
