--- a/views/list/list.ejs
+++ b/views/list/list.ejs
@@ -10,7 +10,7 @@
                 <% if(!logStatus) {%>
                     <i class="iconfont login-img unlogged">&#xe632;</i>  
                 <% }else{%>
-                    <i class="iconfont login-img logged">&#xe60f;</i>  
+                    <i class="iconfont login-img logged">&#xe605;</i>  
                 <%}%>
                 <span class="split-img"></span>
             </span>
@@ -23,14 +23,14 @@
                 <li  class="fy-item" data-id=<%=item.id%>>
                     <div class="fy-item-cover">
                         <img src="/resource/<%=item.id%>/cover.jpg" class="fy-item-img">
-                        <span class="like-icon donot-like"></span>
                     </div>                
                     <div class="fy-item-info clearfix">
                         <img class="fy-item-portrait" src="/resource/<%=item.id%>/portrait.jpg">                                       
                         <div class="fy-item-textinfo">
                             <p class="fy-item-name"><%=item.title%></p>
-                            <p class="fy-item-detail"><i class="iconfont info-icon">&#xe602;</i><span><%=item.type%></span><i class="iconfont info-icon">&#xe682;</i><span>装修<%=item.dec_cost%>万</span><i class="iconfont info-icon">&#xe635;</i><span><%=item.province%> <%=item.county%></span></p>
+                            <p class="fy-item-detail"><i class="iconfont info-icon">&#xe602;</i><span><%=item.type%></span><i class="iconfont info-icon">&#xe682;</i><span>装修<%=item.dec_cost%>万</span><i class="iconfont info-icon">&#xe635;</i><span><%=item.province%> <%=item.county%></span></p>                           
                         </div>
+                        <span class="like-icon donot-like"></span>
                     </div>  
                 </li>
             <% }) %>
